--- a/MarketPlaceWeb/Views/Account/ForgotPassword.cshtml
+++ b/MarketPlaceWeb/Views/Account/ForgotPassword.cshtml
@@ -1,7 +1,6 @@
-﻿@model DataLayer.DTOs.Account.LoginUserDTO
-
+﻿@model DataLayer.DTOs.Account.ForgotPasswordDTO
 @{
-    ViewData["Title"] = "ورود به حساب کاربری";
+    ViewData["Title"] = "فراموشی کلمه ی عبور";
 }
 
 @section scripts
@@ -17,7 +16,7 @@
                 <div class="breadcrumb_content">
                     <ul>
                         <li><a href="index.html">خانه</a></li>
-                        <li>ورود به حساب کاربری</li>
+                        <li>@ViewData["Title"]</li>
                     </ul>
                 </div>
             </div>
@@ -31,24 +30,17 @@
             <!--register area start-->
             <div class="col-lg-6 col-md-6 offset-lg-3 offset-md-3">
                 <div class="account_form register">
-                    <h2>لاگین</h2>
-                    <form asp-controller="Account" asp-action="Login" method="post">
+                    <h2>@ViewData["Title"]</h2>
+                    <form asp-controller="Account" asp-action="ForgotPassword" method="post">
                         <partial name="_CaptchaInput" />
                         <p>
                             <label>تلفن همراه<span>*</span></label>
                             <input type="text" asp-for="Mobile">
                             <span class="text-danger" asp-validation-for="Mobile"></span>
                         </p>
-                        <p>
-                            <label>رمز عبور <span>*</span></label>
-                            <input type="password" asp-for="Password">
-                            <span class="text-danger" asp-validation-for="Password"></span>
-                        </p>
-                        <p>
-                            <a asp-area="" asp-controller="Account" asp-action="ForgotPassword">کلمه ی عبور خود را فراموش کرده ام</a>
-                        </p>
+
                         <div class="login_submit">
-                            <button type="submit">ورود</button>
+                            <button type="submit">بازیابی</button>
                         </div>
                     </form>
                 </div>
@@ -57,3 +49,5 @@
         </div>
     </div>
 </div>
+
+
