--- a/MarketPlaceWeb/Views/Shared/Components/SiteFooter/SiteFooter.cshtml
+++ b/MarketPlaceWeb/Views/Shared/Components/SiteFooter/SiteFooter.cshtml
@@ -1,4 +1,10 @@
-﻿<!--footer area start-->
+﻿@using DataLayer.Entities.Site
+
+@{
+    var siteSetting = ViewBag.SiteSetting as SiteSetting;
+}
+
+<!--footer area start-->
 <footer class="footer_widgets">
     <div class="footer_top">
         <div class="container">
@@ -9,10 +15,19 @@
                             <a href="#"><img src="/img/logo/logo.png" alt=""></a>
                         </div>
                         <div class="footer_contact">
-                            <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
-                            <p><span>آدرس: </span> تبریز، چهارراه آبرسان، فلکه دانشگاه، برج بلور، طبقه 678، واحد 85</p>
-                            <p><span>موبایل: </span><a class="ltr-text" href="tel:+989123456789">+(98) 123 456 789</a> ، <a class="ltr-text" href="tel:+989123456789">+(98) 123 456 789</a> </p>
-                            <p><span>پشتیبانی: </span><a target="_blank" href="#">support@sample.com</a></p>
+                            <p>@siteSetting.FooterText</p>
+                            <p><span>آدرس: </span>@siteSetting.Address</p>
+                            <p><span>موبایل: </span>
+                                @if(!string.IsNullOrEmpty(siteSetting.Mobile))
+                                {
+                                    foreach(var mobile in siteSetting.Mobile.Split("-"))
+                                    {
+                                        <a class="ltr-text" href="@mobile">@mobile</a>
+                                    }
+                                    
+                                }
+                            </p>
+                            <p><span>پشتیبانی: </span><a target="_blank" href="#">@siteSetting.Email</a></p>
                         </div>
                     </div>
                 </div>
@@ -84,9 +99,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 col-md-6">
-                    <div class="copyright_area">
-                        <p>toplearn</p>
-                    </div>
+                   
                 </div>
                 <div class="col-lg-6 col-md-6">
                     <div class="footer_payment text-right">
