--- a/MarketPlaceWeb/Views/Shared/Components/SiteHeader/SiteHeader.cshtml
+++ b/MarketPlaceWeb/Views/Shared/Components/SiteHeader/SiteHeader.cshtml
@@ -34,7 +34,7 @@
                         else
                         {
                             <ul>
-                                <li><a asp-controller="Account" asp-action="Register"> @User.Identity.Name، خوش آمدید </a></li>
+                                <li><a asp-area="User" asp-controller="Home" asp-action="Dashboard"> @User.Identity.Name، خوش آمدید </a></li>
                                 <li><a asp-controller="Account" asp-action="LogOut"> خروج </a></li>
                             </ul>
                         }
@@ -252,7 +252,7 @@
                             else
                             {
                                 <ul>
-                                    <li><a asp-controller="Account" asp-action="Register"> @User.Identity.Name، خوش آمدید </a></li>
+                                    <li><a asp-area="User" asp-controller="Home" asp-action="Dashboard"> @User.Identity.Name، خوش آمدید </a></li>
                                     <li><a asp-controller="Account" asp-action="LogOut"> خروج </a></li>
                                 </ul>
                             }
