--- a/MarketPlaceWeb/Areas/User/Views/Ticket/AddTicket.cshtml
+++ b/MarketPlaceWeb/Areas/User/Views/Ticket/AddTicket.cshtml
@@ -1,5 +1,5 @@
 ﻿@using DataLayer.Entities.Contacts
-@model DataLayer.DTOs.Contacts.AddTicketViewModel
+@model DataLayer.DTOs.Contacts.AddTicketDTO
 @{
     ViewData["Title"] = "ثبت تیکت جدید";
 }
@@ -56,7 +56,7 @@
                                             <span class="text-danger" asp-validation-for="TicketPriority"></span>
                                             <br />
                                             <label>متن پیام</label>
-                                            <textarea class="form-control" asp-for="Text" rows="10"></textarea>
+                                            <textarea class="form-control" asp-for="Text" rows="10"  ckeditor="1"></textarea>
                                             <span class="text-danger" asp-validation-for="Text"></span>
                                             <br />
                                             <div class="save_button primary_btn default_button">
