--- a/MarketPlaceWeb/Views/Shared/_HeaderReferences.cshtml
+++ b/MarketPlaceWeb/Views/Shared/_HeaderReferences.cshtml
@@ -10,3 +10,4 @@
 
     <!-- Main Style CSS -->
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/custom.css">
