--- a/MarketPlaceWeb/Areas/User/Views/Shared/Components/UserSideBar/UserSideBar.cshtml
+++ b/MarketPlaceWeb/Areas/User/Views/Shared/Components/UserSideBar/UserSideBar.cshtml
@@ -6,6 +6,8 @@
         <li> <a asp-area="User" asp-controller="Account" asp-action="EditProfile" class="nav-link">ویرایش اطلاعات</a></li>
         <li> <a asp-area="User" asp-controller="Ticket" asp-action="AddTicket" class="nav-link">ثبت تیکت جدید</a></li>
         <li> <a asp-area="User" asp-controller="Ticket" asp-action="Index" class="nav-link">تیکت ها</a></li>
+        <li><a asp-area="User" asp-controller="Store" asp-action="RequestStorePanel" class="nav-link">درخواست پنل فروشندگی</a></li>
+        <li><a asp-area="User" asp-controller="Store" asp-action="StoreRequests" class="nav-link">درخواست های فروشندگی</a></li>
         <li><a asp-controller="Account" asp-action="LogOut" class="nav-link">خروج</a></li>
     </ul>
 </div>
